--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
   "license": "MIT",
   "devDependencies": {
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "ee-typed": "^0.1.0",
+    "events": "^3.3.0",
+    "peerjs": "^1.5.4"
   }
 }
