--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@types/aes-js": "^3.1.4",
+    "aes-js": "^3.1.2",
+    "bs58": "^6.0.0",
     "ee-typed": "^0.1.0",
     "events": "^3.3.0",
-    "peerjs": "^1.5.4"
+    "msgpackr": "^1.11.0",
+    "peerjs": "^1.5.4",
+    "sha3": "^2.1.4"
   }
 }
