--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "main": "dist/src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && tsc"
+    "build": "rm -rf dist && tsc",
+    "demo": "vite dev"
   },
   "keywords": [],
   "author": "Andrew Morris",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vite": "^5.4.9"
   },
   "dependencies": {
     "@types/aes-js": "^3.1.4",
     "aes-js": "^3.1.2",
     "bs58": "^6.0.0",
+    "buffer": "^6.0.3",
     "ee-typed": "^0.1.0",
     "events": "^3.3.0",
     "msgpackr": "^1.11.0",
